<resources>
    <string name="app_name">默友</string>
    <string name="login">登录</string>
    <string name="moyou">默友</string>
    <string name="extension_centre">推广中心</string>
    <string name="member_centre">会员中心</string>
    <string name="tab_extension_centre1">产品实时推广奖励</string>
    <string name="tab_extension_centre2">英雄榜</string>
    <string name="all_pairing">所有配对</string>
    <string name="tab_successful_pairing">成功配对</string>
    <string name="tab_unpaired">未配对</string>
    <string name="tab_system_message">系统信息</string>
    <string name="tip_login">陌陌聊不如默默见,更准更快</string>
    <string name="input_telphone_num">输入手机号码</string>
    <string name="receive_code">输入短信验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="other_login_methods">其他登录方式</string>
    <string name="area_code">+86</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="just_now">刚刚</string>
    <string name="sec_before">%d秒前</string>
    <string name="min_before">%d分钟前</string>
    <string name="today">今天%tR</string>
    <string name="yesterday">昨天%tR</string>
    <string name="mill" translatable="false">%tc</string>
    <string name="play_fail">播放失败</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="version">1.1.3</string>
    <string name="one_star_member">一星会员</string>
    <string name="two_star_member">二星会员</string>
    <string name="three_star_member">三星会员</string>
    <string name="share_money">分享赚钱</string>
    <string name="member_i_promoted">我推广的会员</string>
    <string name="promoted_code">我的推广二维码</string>
    <string name="bybike">随行单车</string>
    <string name="beijing">北京</string>
    <string name="foot">步行</string>
    <string name="bike_distance">骑行距离</string>
    <string name="distance">距离</string>
    <string name="each_hour">每小时</string>
    <string name="price">0.5元</string>
    <string name="bike_code">车辆编码</string>
    <string name="book_countdown">保留倒计时</string>
    <string name="bike_sound">车辆发声</string>
    <string name="cancel_book">取消预约</string>
    <string name="book">确定预约</string>
    <string name="book_prompt">预约车辆在您靠近时，自动解锁~</string>
    <string name="unlock">输码解锁</string>
    <string name="unlock_auto">自动解锁</string>
    <string name="cancel_book_toast">超过预约时间，系统已自动结束</string>
    <string name="code_unlock">输码解锁</string>
    <string name="code_prompt">在车锁和车头位置，已有车辆编码</string>
    <string name="unlock_im">立即解锁</string>
    <string name="wallet">我的钱包</string>
    <string name="my_order">我的订单</string>
    <string name="receiving_address">收货地址</string>
    <string name="add_receiving_address">+新增收货地址</string>
    <string name="novice_guidance">新手指导</string>
    <string name="route">我的行程</string>
    <string name="invite_friend">邀请好友</string>
    <string name="feedback">问题反馈</string>
    <string name="guide">使用指南</string>
    <string name="setting">设置</string>
    <string name="end_route">结束\n行程</string>
    <string name="open_gps">请先打开GPS，提高定位准确度</string>
    <string name="inner_navi">内置导航</string>
    <string name="baidu_navi">百度地图</string>
    <string name="gaode_navi">高德地图</string>
    <string name="bike_time">骑行时长</string>
    <string name="bike_price">费用计算</string>
    <string name="route_detail">行程详情</string>
    <string name="route_replay">轨迹回放</string>
    <string name="account_ballance">账户余额&#160;0&#160;元</string>
    <string name="transaction_type">请选择交易类型</string>
    <string name="selector_product_type">选择产品类型</string>
    <string name="selector_pay_type">选择支付类型</string>
    <string name="confirm_payment">确认支付</string>
    <string name="routing">行程中</string>
    <string name="routing_prompt">手动把车子锁上后，自动结束计费~</string>
    <string name="my_route">我的行程</string>
    <string name="no_route">您还没有行程</string>
    <string name="surplus_days">剩余365天</string>
    <string name="edit_personal_info">编辑个人资料</string>
    <string name="person_name">姓名</string>
    <string name="person_sex">性别</string>
    <string name="person_age">年龄</string>
    <string name="person_height">身高</string>
    <string name="person_weight">体重</string>
    <string name="range">范围</string>
    <string name="person_birthday">生日</string>
    <string name="person_area">地区</string>
    <string name="person_nickname">昵称</string>
    <string name="ordinary_member">普通会员</string>
    <string name="be_member">购买会员 >></string>
    <string name="detail">明细</string>
    <string name="weixin_pay">微信支付</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="product_purchase">产品购买</string>
    <string name="a_regular_member_now">你现在是普通会员</string>
    <string name="member_privileges">会员特权</string>
    <string name="vip_member">VIP会员</string>
    <string name="vendors_member">商户会员</string>
    <string name="product_member">产品会员</string>
    <string name="one_year">(一年)</string>
    <string name="recommend">(推荐)</string>
    <string name="nine_yuan">9元</string>
    <string name="balance_payment">使用余额支付</string>
    <string name="make_friends_setting">交友设置</string>
    <string name="address">位置</string>
    <string name="my_current_location">我当前的定位(深圳市)</string>
    <string name="show_sex">显示性别</string>
    <string name="dating_scene">交友场景</string>
    <string name="change_another_one">换一个</string>
    <string name="candid_agreement">坦诚相约</string>
    <string name="data_parsing">数据解析中,请等待</string>
    <string name="purse_balance">钱包余额(元)</string>
    <string name="purse_management">钱包管理</string>
    <string name="bank_card_management">银行卡管理</string>
    <string name="pocket_money">零钱提现</string>
    <string name="current_balance">当前余额</string>
    <string name="rollout_bankcard">转出到银行卡</string>
    <string name="text_01">编辑个人资料</string>
    <string name="text_02">88</string>
    <string name="text_03">Aaron</string>
    <string name="text_04">普通会员</string>
    <string name="text_05">购买会员</string>
    <string name="text_06">性别</string>
    <string name="text_07">男</string>
    <string name="text_08">昵称</string>
    <string name="text_10">身高</string>
    <string name="text_11">168cm</string>
    <string name="text_12">体重</string>
    <string name="text_13">65kg</string>
    <string name="text_14">生日</string>
    <string name="text_15">1980–80–80</string>
    <string name="text_16">地区</string>
    <string name="text_17">深圳</string>
    <string name="text_18">确定</string>
    <string name="text_19">更换</string>
    <string name="text_20">删除</string>
    <string name="empty"></string>
    <string name="main_tab_session">会话</string>
    <string name="main_tab_contact">通讯录</string>
    <string name="user_profile">个人名片</string>
    <string name="logining">登录中\u2026</string>
    <string name="register">注册</string>
    <string name="registering">注册中\u2026</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="login_hint_account">请输入帐号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="input_account">请输入帐号，限20位字母或者数字</string>
    <string name="register_account_tip">帐号限20位字母或者数字</string>
    <string name="input_nickname">请输入昵称，限10位汉字、字母或者数字</string>
    <string name="register_nick_name_tip">昵称限10位汉字、字母或者数字</string>
    <string name="input_password">请输入密码，6~20位字母或者数字</string>
    <string name="register_password_tip">密码必须为6~20位字母或者数字</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败,错误码%1$s:%2$s</string>
    <string name="login_has_account">已有帐号？直接登录</string>
    <string name="done">完成</string>
    <string name="prepare_data">正在准备数据...</string>
    <string name="readed">已读</string>
    <string name="unread">未读</string>
    <string name="about">关于</string>
    <string name="logout">注销</string>
    <string name="add">添加</string>
    <string name="remove">移除</string>
    <string name="menu">菜单</string>
    <string name="verify_reminder">验证提醒</string>
    <string name="without_content">暂无</string>
    <string name="create">新建</string>
    <string name="delete_tip">删除提示</string>
    <string name="delete_system_message">删除该条系统消息？</string>
    <string name="delete_success">删除成功</string>
    <string name="clear_all_success">清空成功</string>
    <string name="login_failed">帐号或密码错误</string>
    <string name="login_exception">无效输入</string>
    <string name="file_browser">文件浏览器</string>
    <string name="upload_text">上传</string>
    <string name="download_text">下载</string>
    <string name="now_allow_space">不能含有空格</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="search_advanced_team">搜索高级群</string>
    <string name="net_broken">当前网络不可用</string>
    <string name="nim_status_unlogin">未登录</string>
    <string name="nim_status_connecting">连接中...</string>
    <string name="nim_status_logining">登录中...</string>
    <string name="copyright">Copyright ©1997-2018 网易公司版权所有</string>
    <string name="user_not_exsit">该用户不存在</string>
    <string name="user_tips">请检查你输入的帐号是否正确</string>
    <string name="edit">编辑</string>
    <string name="input_panel_guess">猜 拳</string>
    <string name="input_panel_audio_call">语音通话</string>
    <string name="input_panel_video_call">视频通话</string>
    <string name="input_panel_file">发送文件</string>
    <string name="input_panel_RTS">白 板</string>
    <string name="input_panel_snapchat">阅后即焚</string>
    <string name="input_panel_tip">Tip</string>
    <string name="input_panel_ack_msg">已读回执</string>
    <string name="message_history_query">云消息记录</string>
    <string name="message_search_title">搜索本地消息记录</string>
    <string name="message_clear">清空本地消息记录</string>
    <string name="message_info">聊天信息</string>
    <string name="add_friend">加为好友</string>
    <string name="remove_friend">删除好友</string>
    <string name="begin_chat">聊天</string>
    <string name="remove_friend_tip">删除好友后，将同时解除双方的好友关系</string>
    <string name="remove_friend_success">删除好友成功</string>
    <string name="add_friend_self_tip">不能添加自己为好友</string>
    <string name="add_friend_verify_tip">好友验证请求</string>
    <string name="black_list_tip">你不会接收到列表中联系人的任何消息</string>
    <string name="add_buddy">添加好友</string>
    <string name="create_normal_team">创建讨论组</string>
    <string name="team_apply_sending">发送中…</string>
    <string name="no_team">您还没有群</string>
    <string name="no_normal_team">您还没有讨论组</string>
    <string name="team_search_hint">请输入群号进行搜索</string>
    <string name="team_number_not_exist">群号不存在</string>
    <string name="team_join">加入群组</string>
    <string name="team_join_success">成功加入群: %1$s</string>
    <string name="team_apply_to_join_send_success">申请已发出</string>
    <string name="has_exist_in_team">已经在群里</string>
    <string name="team_num_limit">群数量已达上限</string>
    <string name="custom_notification">自定义通知</string>
    <string name="select_custom_notification_target">选择发送对象</string>
    <string name="send_custom_notification_tip">请输入要发送的内容</string>
    <string name="send_custom_notification_success">自定义通知发送成功</string>
    <string name="send_custom_notification_failed">自定义通知发送失败</string>
    <string name="send_custom_notification_to_buddy">发送给好友</string>
    <string name="send_custom_notification_to_team">发送给群组</string>
    <string name="msg_type_image">图片</string>
    <string name="msg_type_audio">语音</string>
    <string name="location_navigate">导航</string>
    <string name="location_loading">正在定位</string>
    <string name="location_map">地图定位</string>
    <string name="my_location">我的位置</string>
    <string name="location_address_unkown">该位置信息暂无</string>
    <string name="format_mylocation">我的位置：%s</string>
    <string name="location_address_fail">获取位置信息失败</string>
    <string name="tools_selected">选择工具</string>
    <string name="friends_map_navigation_web">在网页中打开</string>
    <string name="location_open_map_error">打开地图出错</string>
    <string name="about_clear_msg_history">清空所有聊天记录</string>
</resources>