<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/huise_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_bg"
        android:gravity="bottom"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:onClick="finishActivity"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@mipmap/return_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/wallet"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="right|center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/detail"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/charge_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_layout"
        android:background="@drawable/edge_shadow_bg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ballance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/purse_balance"
            android:textColor="@color/color_9f9f9f"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp10"
            android:text="8888.88"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/text_color_1"
            android:textSize="32dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_purse_management"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/charge_layout"
        android:text="@string/purse_management"
        android:textColor="@color/text_color_2"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/trancaction_type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_purse_management"
        android:layout_margin="5dp"
        android:background="@drawable/edge_shadow_bg"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="120dp"
            android:background="@color/color_f08080"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="零钱充值"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_pocket_money"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="120dp"
            android:background="@color/color_cdcdcd"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/text_color_1"
                android:text="@string/pocket_money"/>
        </LinearLayout>

        <View
            android:layout_width="1.5dp"
            android:layout_height="120dp"
            android:background="@color/text_color_3"/>

        <LinearLayout
            android:id="@+id/ll_bank_card_management"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="120dp"
            android:background="@color/color_cdcdcd"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/text_color_1"
                android:text="@string/bank_card_management"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>